fixed field validations, renamed some files

--- a/Elective_Courses/src/main/resources/templates/fragments/navigation.html
+++ b/Elective_Courses/src/main/resources/templates/fragments/navigation.html
@@ -15,9 +15,11 @@
                 <a class="nav-link" href="#" th:href="@{/students}">Students</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" th:href="@{/electivecourses}">ElectiveCourses</a>
+                <a class="nav-link" href="#" th:href="@{/electivecourses}">Elective Courses</a>
             </li>
-			<!--
+			<li class="nav-item">
+			    <a class="nav-link" href="#" th:href="@{/coursecategories}">Course Categories</a>
+			</li>			<!--
             <li class="nav-item">
                 <a class="nav-link" href="#" th:href="@{/results}">Results</a>
             </li>
