--- a/Elective_Courses/src/main/resources/templates/student-create.html
+++ b/Elective_Courses/src/main/resources/templates/student-create.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 py-4">
-                <h2>Add Department</h2>
+                <h2>Add Student</h2>
 
                 <form th:replace="fragments/studentForm :: studentForm"></form>
             </div>
