--- a/Elective_Courses/src/main/resources/templates/coursecategory-create.html
+++ b/Elective_Courses/src/main/resources/templates/coursecategory-create.html
@@ -4,7 +4,7 @@
 
 <main role="main">
 
-    <div class="container">
+    <div class="container" sec:authorize="hasRole('ADMIN')">
         <div class="row">
             <div class="col-md-12 py-4">
                 <h2>Add Course Category</h2>
